--- a/client/src/CSS/jitsi.css
+++ b/client/src/CSS/jitsi.css
@@ -1,5 +1,3 @@
-/* src/css/jitsi.css */
-
 .jitsi-component {
   position: relative;
   width: 100%;
@@ -74,6 +72,6 @@
 /* Responsive adjustments */
 @media (max-width: 768px) {
   .jitsi-component {
-    height: calc(100vh - 60px); /* Adjust for mobile headers */
+    height: calc(100vh - 60px); 
   }
 }
